# Error44

./: .gitignore  CMakeLists.txt  README.md  main_output.txt
include/: Integer.hpp  Integer_Mixed_Ops.hpp
src/: Integer.cpp  Integer_Arithmetic.cpp  Integer_Bitwise.cpp  Integer_Comparison.cpp  Integer_Constructors.cpp  Integer_Modular.cpp  Integer_Utilities.cpp  main.cpp
tests/: test_arithmetic.cpp  test_bitwise.cpp  test_comparisons.cpp  test_constructors.cpp  test_modular.cpp
